# cloud_resources_cleanup_scripts

./: .gitignore  README.md  aws_resources_simplified.csv  main.py  pyproject.toml  requirements.txt
aws-resource/: aws_resource_cleaner.py  aws_resource_lister.py
aws-resource-cleaner/: README.md  aws_resource_cleaner.py  aws_resource_lister.py  config.json
gcp_resources/: __init__.py  __main__.py  gcp-resource-lister-README.md  gcp_resource_lister.py  gcp_resource_tool.py  pyproject.toml
