[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.26.0",
    "botocore>=1.29.0",
    "click>=8.0.0",
    "google-cloud-compute>=1.9.0",
    "google-cloud-resource-manager>=1.6.0",
    "google-auth>=2.23.0"
]
